2005-08-26  Yves Combe  <yves@ycombe.net>

	fix compilation error with create_rootdir.
	test system user name (for win 9x).
	change button stock to STOCK_YES in textviex tool.

	* src/gcompris/board_config.c: (gcompris_textbuffer_changed),
	(gcompris_textview_yes), (gcompris_textview):
	* src/gcompris/file_selector.c: (display_file_selector):
	* src/gcompris/profile.c: (gcompris_set_current_user):

2005-08-26  Yves Combe  <yves@ycombe.net>

	improve textview tool.

	* src/gcompris/board_config.c: (gcompris_textbuffer_changed),
	(gcompris_textview_check), (gcompris_textview):

2005-08-26  Yves Combe  <yves@ycombe.net>

	patch by Joe Neeman.
	This patch fixes some issues with Troggle difficulty and fixes translation problems. 

	* src/boards/python/gnumch.py:

2005-08-26  Yves Combe  <yves@ycombe.net>

	add several functions for directory management.
	create user from system data if no user to log (system encoding?).
	
	* src/boards/py-gcompris-user.c: (pyGcomprisUserType_getattr):
	* src/boards/py-mod-gcompris.c: (pyGcomprisTextCallback),
	(py_gcompris_get_user_dirname), (py_gcompris_get_board_dirname),
	(py_gcompris_get_current_user_dirname),
	(py_gcompris_get_current_board_dirname):
	* src/boards/python/pythontest.py:
	* src/gcompris/Makefile.am:
	* src/gcompris/gcompris.c: (setup_window):
	* src/gcompris/gcompris.h:
	* src/gcompris/gcompris_files.c: (gcompris_get_user_dirname),
	(gcompris_get_current_user_dirname), (gcompris_get_board_dirname),
	(gcompris_get_current_board_dirname):
	* src/gcompris/gcompris_files.h:
	* src/gcompris/profile.c: (gcompris_set_current_user):
	* src/gcompris/profile.h:
	* src/gcompris/properties.c:
	* src/gcompris/properties.h:

2005-08-25  bruno coudoin

	* boards/sudoku.xml.in: typos (thanks to Gabor Kelemen)
	* src/boards/python/sudoku.py: After gcompris team review, fixed
	several bugs, added support for drop over previous symbol
	added current sublevel number display
	
2005-08-25  Yves Combe  <yves@ycombe.net>
