@@ -1,6 +1,7 @@
 #include "py-gcompris-properties.h"
 #include <pygobject.h>
 #include "py-gcompris-profile.h"
+#include "py-gcompris-board.h"
 
 staticforward PyTypeObject pyGcomprisPropertiesType;
 
@@ -107,6 +108,8 @@ pyGcomprisPropertiesType_getattr(pyGcomprisPropertiesObject *self, char *name)
     if(strcmp(name,"package_data_dir")==0) return Py_BuildValue("s", self->cdata->package_data_dir);
     if(strcmp(name,"locale")==0) return Py_BuildValue("s", self->cdata->locale);
     if(strcmp(name,"skin")==0) return Py_BuildValue("s", self->cdata->skin);
+    if(strcmp(name,"shared_dir")==0) return Py_BuildValue("s", self->cdata->shared_dir);
+    if(strcmp(name,"users_dir")==0) return Py_BuildValue("s", self->cdata->users_dir);
     
     if(strcmp(name,"profile")==0){
       if (self->cdata->profile)
