@@ -1,5 +1,16 @@
 2005-08-26  Yves Combe  <yves@ycombe.net>
 
+	put words list editor in a separate file from board_dir. (wordlist.py)
+	add missing shared_dir and users_dir in python properties binding.
+
+	* src/boards/py-gcompris-properties.c:
+	(pyGcomprisPropertiesType_getattr):
+	* src/boards/python/admin/Makefile.am:
+	* src/boards/python/admin/board_list.py:
+	* src/boards/python/admin/wordlist.py:
+
+2005-08-26  Yves Combe  <yves@ycombe.net>
+
 	fix compilation error with create_rootdir.
 	test system user name (for win 9x).
 	change button stock to STOCK_YES in textviex tool.
